# font

./: Cargo.toml  index.html
src/: bezier.rs  circle.rs  lib.rs  loop.js  shader.wgsl  state.rs
src/renderer/: instance_input.rs  mod.rs  shader.wgsl  vertex.rs
src/renderer/bezier_renderer/: instance_input.rs  mod.rs  uniform.rs
