[package]
name = "web-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.25.0", features = [ "derive" ] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
env_logger = "0.11.10"
js-sys = "0.3.98"
log = "0.4.29"
nalgebra-glm = "0.21.0"
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
wgpu = {version = "28.0", features = ["webgl"] }

[dependencies.web-sys]
version = "0.3.98"
features = ['Document', 'Element', 'HtmlCanvasElement', 'Window']
